2005-03-10 16:58  antirez

	* ChangeLog, jim.c, jim.h, test.tcl: lrange command (me)

2005-03-10 11:03  antirez

	* Makefile, README, bench.tcl, jim.c, tools/benchtable.tcl: Some
	  fix to bench.tcl to make it able to run in Tcl7.6.  README
	  update.

2005-03-09 14:42  patthoyts

	* Makefile.vc: Add profile option

2005-03-09 13:00  patthoyts

	* bench.tcl: Improved formatting for normal output

2005-03-09 12:57  patthoyts

	* tools/benchtable.tcl: New file to tabulate accumulated benchmark
	  data from bench.tcl -batch

2005-03-09 12:06  antirez

	* ChangeLog, jim.c, jim.h, test.tcl: [linsert] command added
	  (Clemens Hintze).  Jim_GetIndex() semantic changed to make
	  [lindex] more compatible with Tcl's one, without effects on other
	  commnads (me).

2005-03-09 09:52  antirez

	* ChangeLog, bench.tcl: New test added to the benchmark

2005-03-09 08:19  antirez

	* ChangeLog, TODO, bench.tcl, jim.c: An initial [format] command.

2005-03-08 18:06  antirez

	* ChangeLog, jim.c, jim.h, jimsh.c: Did some fix in jimsh.c,
	  exported some more API function to set variables and global
	  variables using a string C as name instead of a Jim_Obj. This is
	  more handy in mani conditions.

2005-03-08 16:10  patthoyts

	* bench.tcl, jim.c, jim.h: JIM_VERSION is to be an integer value
	  which we present as MAJOR.MINOR to users. MAJOR is JIM_VERSION /
	  100

2005-03-08 14:45  patthoyts

	* bench.tcl, jim.c, jim.h, jimsh.c: Added [info patchlevel] and
	  setup argv0 and argv variables in jimsh.  Changed
	  Jim_InteractivePrompt to take a pre-initialized interpreter.

2005-03-08 12:32  antirez

	* ChangeLog, jim.c: aesthetic changes to source code (SS)

2005-03-08 12:01  antirez

	* ChangeLog, jim.c: Removed an useless #if0 ... #endif block of
	  code.

2005-03-08 10:50  antirez

	* ChangeLog, jim.c, test.tcl: Info exists + tests (Clemens Hintze).

2005-03-08 10:42  antirez

	* ChangeLog, jim.c, regtest.tcl: Applied patch about unset a(x)